Steering actuator bug with Navmesh #43994

Closed
opened 2015-03-14 19:38:11 +01:00 by Vincent Girès · 4 comments

System Information
Ubuntu 14.04 / GTX 760

Blender Version
Broken: 2.74 RC1 4aa5109
Worked: 2.73

Short description of error
Activate Facing check-box and changing Velocity is not working anymore in the 2.74 RC version.

Exact steps for others to reproduce the error
Download this file : http://vincentgires.com/divers/blender_bug/navMesh_bug_2.74.blend
Try it on the 2.74 RC1, check or un-check facing will not change anything.
Increasing a lot Velocity does almost nothing.
Same file works fine in the 2.73.

**System Information** Ubuntu 14.04 / GTX 760 **Blender Version** Broken: 2.74 RC1 4aa5109 Worked: 2.73 **Short description of error** Activate Facing check-box and changing Velocity is not working anymore in the 2.74 RC version. **Exact steps for others to reproduce the error** Download this file : http://vincentgires.com/divers/blender_bug/navMesh_bug_2.74.blend Try it on the 2.74 RC1, check or un-check facing will not change anything. Increasing a lot Velocity does almost nothing. Same file works fine in the 2.73.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @VincentGires

Added subscriber: @VincentGires
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Jorge Bernal self-assigned this 2015-03-15 11:45:23 +01:00
Member

Closing by commit dd3ade2

The facing issue is now resolved in master.

By other hand, now the aceleration is taken into account. I mean, if you want the same behaviour as before (that's max velocity from beginning) you have to increase the aceleration value a lot more than velocity value (it has been noted in release notes http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.74/BGE).

In your case, putting aceleration value to 15-20 (taken velocity value as 5) will be more than enough.

Thanks for reporting and testing new features.

Closing by commit dd3ade2 The facing issue is now resolved in master. By other hand, now the aceleration is taken into account. I mean, if you want the same behaviour as before (that's max velocity from beginning) you have to increase the aceleration value a lot more than velocity value (it has been noted in release notes http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.74/BGE). In your case, putting aceleration value to 15-20 (taken velocity value as 5) will be more than enough. Thanks for reporting and testing new features.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43994
No description provided.