BGE: Fix for T43994 Steering actuator bug with Navmesh

Now the facing option is taken into account as before

This is a regression and to be ported to the final release branch.